[tool.poetry]
name = "zemfrog-resetdb"
version = "1.0.1"
description = "Command to reset the database for zemfrog"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
zemfrog = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
